--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "clean": "rimraf dist .astro node_modules"
   },
   "devDependencies": {
+    "@astrojs/mdx": "^1.1.2",
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/tailwind": "^5.0.1",
     "@types/micromodal": "^0.3.3",
     "@types/node": "^20.8.4",
-    "astro": "^3.2.3",
+    "astro": "^3.3.2",
     "astro-icon": "^0.8.1",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "^0.10.0",
