--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "clean": "rimraf dist .astro node_modules"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^1.1.2",
-    "@astrojs/svelte": "^4.0.3",
-    "@astrojs/tailwind": "^5.0.1",
     "@types/micromodal": "^0.3.3",
     "@types/node": "^20.8.4",
-    "astro": "^3.3.2",
-    "astro-icon": "^0.8.1",
+    "typescript": "^5.2.2",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "^0.10.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "rimraf": "^5.0.5",
     "svgo": "2.8.0",
     "tailwindcss-fluid-type": "^2.0.3",
-    "typescript": "^5.2.2"
+    "astro": "^3.3.2",
+    "astro-icon": "^0.8.1"
   },
   "dependencies": {
+    "@astrojs/mdx": "^1.1.2",
+    "@astrojs/svelte": "^4.0.3",
+    "@astrojs/tailwind": "^5.0.1",
     "@astrojs/node": "^6.0.3",
     "@fontsource-variable/inter": "^5.0.13",
     "micromodal": "^0.4.10",
