--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
   "devDependencies": {
     "@types/micromodal": "^0.3.3",
     "@types/node": "^20.8.4",
-    "typescript": "^5.2.2",
+    "astro": "^3.3.2",
+    "astro-icon": "^0.8.1",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "^0.10.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "rimraf": "^5.0.5",
     "svgo": "2.8.0",
     "tailwindcss-fluid-type": "^2.0.3",
-    "astro": "^3.3.2",
-    "astro-icon": "^0.8.1"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.2",
+    "@astrojs/netlify": "^3.0.3",
+    "@astrojs/node": "^6.0.3",
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/tailwind": "^5.0.1",
-    "@astrojs/node": "^6.0.3",
     "@fontsource-variable/inter": "^5.0.13",
     "micromodal": "^0.4.10",
     "sharp": "^0.32.6",
