--- a/package.json
+++ b/package.json
@@ -13,12 +13,8 @@
     "clean": "rimraf dist .astro node_modules"
   },
   "devDependencies": {
-    "@astrojs/svelte": "^4.0.3",
-    "@astrojs/tailwind": "^5.0.1",
     "@types/micromodal": "^0.3.3",
     "@types/node": "^20.8.4",
-    "astro": "^3.2.3",
-    "astro-icon": "^0.8.1",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "^0.10.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
@@ -28,8 +24,14 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@astrojs/mdx": "^1.1.2",
+    "@astrojs/netlify": "^3.0.3",
     "@astrojs/node": "^6.0.3",
+    "@astrojs/svelte": "^4.0.3",
+    "@astrojs/tailwind": "^5.0.1",
     "@fontsource-variable/inter": "^5.0.13",
+    "astro": "^3.3.2",
+    "astro-icon": "^0.8.1",
     "micromodal": "^0.4.10",
     "sharp": "^0.32.6",
     "svelte": "^4.2.1",
