--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.8.4",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "^0.10.0",
+    "prettier-plugin-svelte": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "rimraf": "^5.0.5",
     "svgo": "2.8.0",
