--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -3,6 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": ">=16 <20"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -26,7 +29,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.2",
-    "@astrojs/netlify": "^3.0.3",
+    "@astrojs/netlify": "^3.0.4",
     "@astrojs/node": "^6.0.3",
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/tailwind": "^5.0.1",
