--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,10 @@ NODE_VERSION = "18"
 command = "pnpm build:site"
 publish = "packages/site/dist"
 
+[dev]
+command = "pnpm dev"
+publish = "packages/site/dist"
+targetPort = 4321
 
 [[headers]]
 for = "/*"
@@ -12,4 +16,5 @@ for = "/*"
 Cache-Control = "public, max-age=0, must-revalidate"
 
 [functions]
-directory = "packages/site/functions"
+directory = "packages/functions"
+node_bundler = "esbuild"
