--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "cli",
+  "name": "@sc-coiffure/cli",
   "version": "1.0.0",
   "description": "Cli tool for sc monorepo",
-  "main": "index.js",
   "scripts": {
     "start": "ts-node src/cli.ts"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.4",
@@ -15,6 +12,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "yargs": "^17.7.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@sc-coiffure/core": "workspace:*"
   }
 }
