--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "@sc-coiffure/site",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -25,7 +25,8 @@
     "rimraf": "^5.0.5",
     "svgo": "2.8.0",
     "tailwindcss-fluid-type": "^2.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.2",
@@ -40,8 +41,10 @@
     "sharp": "^0.32.6",
     "svelte": "^4.2.1",
     "swiper": "^10.3.1",
-    "tailwindcss": "^3.3.3",
     "tiny-invariant": "^1.3.1",
+    "@sc-coiffure/core": "workspace:*"
+  },
+  "peerDependencies": {
     "zod": "^3.22.4"
   }
 }
