--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -27,9 +27,11 @@
     /* Modules */
     "module": "ESNext",                                /* Specify what module code is generated. */
     "rootDir": "lib",                                  /* Specify the root folder within your source files. */
-    "moduleResolution": "Bundler",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "lib",                                   /* Specify the base directory to resolve non-relative module names. */    
-    // "paths": {},                                         /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "moduleResolution": "Node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["lib/*"]
+    },                                       /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -51,11 +53,11 @@
     /* Emit */
     // "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-    // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
+    //  "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-    //  "outDir": "lib",                                   /* Specify an output folder for all emitted files. */
+    //  "outDir": "dist",                                   /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
      "noEmit": true,                                   /* Disable emitting files from a compilation. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
@@ -106,6 +108,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
      },
-     "include": ["lib/*"],
+     "include": ["lib/**/*"],
      "exclude": ["node_modules", "dist"]
 }
