--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -42,7 +42,8 @@
     "svelte": "^4.2.1",
     "swiper": "^10.3.1",
     "tiny-invariant": "^1.3.1",
-    "@sc-coiffure/core": "workspace:*"
+    "@sc-coiffure/core": "workspace:*",
+    "axios": "1.6.1"
   },
   "peerDependencies": {
     "zod": "^3.22.4"
