--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,12 +7,14 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@sc-coiffure/core": "workspace:*",
     "@types/node": "^20.8.4",
     "@types/yargs": "^17.0.29",
+    "dotenv": "^16.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "yargs": "^17.7.2",
     "zod": "^3.22.4",
-    "@sc-coiffure/core": "workspace:*"
+    "axios": "1.6.1"
   }
 }
