--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -24,25 +24,26 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "rimraf": "^5.0.5",
     "svgo": "2.8.0",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-fluid-type": "^2.0.3",
-    "typescript": "^5.2.2",
-    "tailwindcss": "^3.3.3"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.2",
+    "@astrojs/mdx": "^1.1.5",
     "@astrojs/netlify": "^3.0.4",
-    "@astrojs/node": "^6.0.3",
+    "@astrojs/node": "^6.1.0",
     "@astrojs/svelte": "^4.0.3",
-    "@astrojs/tailwind": "^5.0.1",
+    "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/inter": "^5.0.13",
-    "astro": "^3.3.2",
+    "@sc-coiffure/core": "workspace:*",
+    "astro": "^3.6.4",
     "astro-icon": "^0.8.1",
+    "axios": "1.6.1",
     "micromodal": "^0.4.10",
     "sharp": "^0.32.6",
     "svelte": "^4.2.1",
     "swiper": "^10.3.1",
-    "tiny-invariant": "^1.3.1",
-    "@sc-coiffure/core": "workspace:*"
+    "tiny-invariant": "^1.3.1"
   },
   "peerDependencies": {
     "zod": "^3.22.4"
