--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">=16 <20"
+    "node": ">=16"
   },
   "scripts": {
     "dev": "astro dev",
@@ -17,16 +17,16 @@
   },
   "devDependencies": {
     "@types/micromodal": "^0.3.5",
-    "@types/node": "^20.11.5",
-    "prettier": "2.8.8",
-    "prettier-plugin-astro": "^0.10.0",
-    "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "@types/node": "^20.11.29",
+    "prettier": "3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-svelte": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "rimraf": "^5.0.5",
-    "svgo": "2.8.0",
+    "svgo": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-fluid-type": "^2.0.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.5",
@@ -34,16 +34,18 @@
     "@astrojs/node": "^6.1.0",
     "@astrojs/svelte": "^4.0.4",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/inter": "^5.0.16",
+    "@fontsource-variable/inter": "^5.0.17",
+    "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/openmoji": "^1.1.49",
     "@sc-coiffure/core": "workspace:*",
-    "astro": "^3.6.4",
-    "astro-icon": "^0.8.2",
-    "axios": "1.6.1",
+    "astro": "^3.6.5",
+    "astro-icon": "^1.1.0",
+    "axios": "^1.6.8",
     "micromodal": "^0.4.10",
     "sharp": "^0.32.6",
-    "svelte": "^4.2.9",
+    "svelte": "^4.2.12",
     "swiper": "^10.3.1",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.3"
   },
   "peerDependencies": {
     "zod": "^3.22.4"
