wip: hero & header

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -72,6 +72,7 @@
     "@inertiajs/core": "^1.2.0",
     "@inertiajs/progress": "^0.2.7",
     "@inertiajs/vue3": "^1.2.0",
+    "@radix-icons/vue": "^1.0.0",
     "@vinejs/vine": "^2.1.0",
     "@vue/server-renderer": "^3.4.31",
     "@vueuse/core": "^10.11.0",
@@ -83,6 +84,7 @@
     "luxon": "^3.4.4",
     "radix-vue": "^1.8.5",
     "reflect-metadata": "^0.2.2",
+    "simple-icons": "^13.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.31"
