--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -80,6 +80,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "edge.js": "^6.0.2",
+    "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-vue": "^8.1.6",
     "lucide-vue-next": "^0.400.0",
     "luxon": "^3.4.4",
