--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "@sc-coiffure/site",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.6.6",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.5",
