--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -54,6 +54,7 @@
     "pino-pretty": "^11.2.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
@@ -97,6 +98,5 @@
       "./app/controllers/**/*.ts",
       "./app/middleware/*.ts"
     ]
-  },
-  "prettier": "@adonisjs/prettier-config"
+  }
 }
