--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -48,18 +48,22 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.8.0",
     "hot-hook": "^0.2.6",
     "pino-pretty": "^11.2.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prettier-eslint": "^16.3.0",
+    "prettier-plugin-classnames": "^0.7.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.15.0",
-    "vite": "^5.3.2"
+    "vite": "^5.3.2",
+    "vue-eslint-parser": "^9.4.3"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.2.3",
