--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -14,9 +14,11 @@
     "typecheck": "tsc --noEmit"
   },
   "imports": {
+    "#app/*": "./app/*.js",
     "#controllers/*": "./app/controllers/*.js",
     "#exceptions/*": "./app/exceptions/*.js",
     "#models/*": "./app/models/*.js",
+    "#instagram/*": "./app/instagram/*.js",
     "#mails/*": "./app/mails/*.js",
     "#services/*": "./app/services/*.js",
     "#listeners/*": "./app/listeners/*.js",
@@ -42,6 +44,7 @@
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.6.6",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -52,7 +55,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.8.0",
     "hot-hook": "^0.2.6",
-
+    "kysely-codegen": "^0.15.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-eslint": "^16.3.0",
@@ -84,18 +87,20 @@
     "@vueuse/core": "^10.11.0",
     "better-sqlite3": "^11.1.1",
     "class-variance-authority": "^0.7.0",
-    "pino-pretty": "^11.2.1",
     "clsx": "^2.1.1",
     "edge.js": "^6.0.2",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-vue": "^8.1.6",
+    "kysely": "^0.27.4",
     "lucide-vue-next": "^0.400.0",
     "luxon": "^3.4.4",
+    "pino-pretty": "^11.2.1",
     "radix-vue": "^1.8.5",
     "reflect-metadata": "^0.2.2",
     "simple-icons": "^13.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^6.19.2",
     "vue": "^3.4.31"
   },
   "hotHook": {
