wip: setup kysely

--- a/packages/site/.env.example
+++ b/packages/site/.env.example
@@ -5,3 +5,9 @@ LOG_LEVEL=info
 APP_KEY=SAiQ9WkthSvCPUc2Z4lmCAKcMzDcxy5X
 NODE_ENV=development
 SESSION_DRIVER=cookie
+IG_API_URL=https://api.instagram.com
+IG_GRAPH_URL=https://graph.instagram.com
+IG_CLIENT_ID=123456789012345
+IG_CLIENT_SECRET=12345678901234567890123456789012
+IG_RETURN_URL=http://localhost:5173
+DATABASE_URL=./tmp/db.sqlite
