--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -11,25 +11,14 @@
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "kysely:codegen": "kysely-codegen --out-file=types/db.ts"
   },
   "imports": {
-    "#app/*": "./app/*.js",
-    "#controllers/*": "./app/controllers/*.js",
-    "#exceptions/*": "./app/exceptions/*.js",
-    "#models/*": "./app/models/*.js",
+    "#pages/*": "./app/pages/*.js",
     "#instagram/*": "./app/instagram/*.js",
-    "#mails/*": "./app/mails/*.js",
-    "#services/*": "./app/services/*.js",
-    "#listeners/*": "./app/listeners/*.js",
-    "#events/*": "./app/events/*.js",
-    "#middleware/*": "./app/middleware/*.js",
-    "#validators/*": "./app/validators/*.js",
-    "#providers/*": "./providers/*.js",
-    "#policies/*": "./app/policies/*.js",
-    "#abilities/*": "./app/abilities/*.js",
-    "#database/*": "./database/*.js",
-    "#tests/*": "./tests/*.js",
+    "#core/*": "./app/core/*.js",
+    "#types/*": "./types/*.js",
     "#start/*": "./start/*.js",
     "#config/*": "./config/*.js"
   },
@@ -73,7 +62,6 @@
     "@adonisjs/core": "^6.12.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/inertia": "^1.1.0",
-    "@adonisjs/lucid": "^21.1.0",
     "@adonisjs/session": "^7.4.2",
     "@adonisjs/shield": "^8.1.1",
     "@adonisjs/static": "^1.1.1",
