--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -18,6 +18,7 @@
     "#pages/*": "./app/pages/*.js",
     "#instagram/*": "./app/instagram/*.js",
     "#core/*": "./app/core/*.js",
+    "#tokens/*": "./app/tokens/*.js",
     "#types/*": "./types/*.js",
     "#start/*": "./start/*.js",
     "#config/*": "./config/*.js"
@@ -88,6 +89,7 @@
     "simple-icons": "^13.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "typeid-js": "^1.0.0",
     "undici": "^6.19.2",
     "vue": "^3.4.31"
   },
