wip: store feed

--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "#pages/*": ["./app/pages/*.js"],
       "#instagram/*": ["./app/instagram/*.js"],
+      "#feed/*": ["./app/feed/*.js"],
       "#core/*": ["./app/core/*.js"],
       "#tokens/*": ["./app/token/*.js"],
       "#types/*": ["./types/*.js"],
