--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^9.2.3",
+    "@adonisjs/cache": "1.0.0-4",
     "@adonisjs/core": "^6.12.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/inertia": "^1.1.0",
