--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,8 +9,8 @@
     "build": "node ace build",
     "dev": "node ace serve --hmr ",
     "test": "node ace test",
-    "lint": "eslint .",
-    "format": "prettier --write .",
+    "lint": "biome lint --write .",
+    "format": "biome format --write .",
     "typecheck": "tsc --noEmit",
     "kysely:codegen": "kysely-codegen --out-file=types/db.ts"
   },
@@ -26,10 +26,9 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.7.0",
-    "@adonisjs/eslint-config": "^1.3.0",
     "@adonisjs/prettier-config": "^1.3.0",
     "@adonisjs/tsconfig": "^1.3.0",
-    "@eslint/js": "^9.6.0",
+    "@biomejs/biome": "^1.8.3",
     "@japa/assert": "^3.0.0",
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
@@ -40,24 +39,14 @@
     "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.6.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.8.0",
     "hot-hook": "^0.2.6",
     "kysely-codegen": "^0.15.0",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-eslint": "^16.3.0",
-    "prettier-plugin-classnames": "^0.7.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0",
-    "vite": "^5.3.2",
-    "vue-eslint-parser": "^9.4.3"
+    "vite": "^5.3.2"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.2.3",
