--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -86,9 +86,6 @@
     "vue": "^3.4.31"
   },
   "hotHook": {
-    "boundaries": [
-      "./app/controllers/**/*.ts",
-      "./app/middleware/*.ts"
-    ]
+    "boundaries": ["./app/controllers/**/*.ts", "./app/middleware/*.ts"]
   }
 }
