--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -19,6 +19,7 @@
     "#instagram/*": "./app/instagram/*.js",
     "#feed/*": "./app/feed/*.js",
     "#core/*": "./app/core/*.js",
+    "#contact/*": "./app/contact/*.js",
     "#tokens/*": "./app/token/*.js",
     "#types/*": "./types/*.js",
     "#start/*": "./start/*.js",
