wip: add motion

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -67,6 +67,7 @@
     "@vinejs/vine": "^2.1.0",
     "@vue/server-renderer": "^3.4.31",
     "@vueuse/core": "^10.11.0",
+    "@vueuse/motion": "^2.2.3",
     "adonisjs-scheduler": "^1.0.5",
     "better-sqlite3": "^11.1.1",
     "class-variance-authority": "^0.7.0",
@@ -80,6 +81,7 @@
     "pino-pretty": "^11.2.1",
     "radix-vue": "^1.8.5",
     "reflect-metadata": "^0.2.2",
+    "resend": "^3.4.0",
     "simple-icons": "^13.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
