--- a/packages/sc-coiffure/package.json
+++ b/packages/sc-coiffure/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "autoprefixer": "^10.4.19",
+    "nuxt-cron": "^1.6.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.1"
   }
