--- a/packages/sc-coiffure/package.json
+++ b/packages/sc-coiffure/package.json
@@ -7,15 +7,19 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "kyselgy:codegen": "npx kysely-codegen",
+    "kysely:migrate": "pnpx tsx db/run.ts"
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
     "@tailwindcss/typography": "^0.5.13",
     "@vueuse/motion": "^2.2.3",
+    "better-sqlite3": "^11.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.6",
+    "kysely": "^0.27.4",
     "lucide-vue-next": "^0.400.0",
     "nuxt": "^3.12.4",
     "radix-vue": "^1.8.5",
@@ -27,6 +31,8 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.3.1",
+    "kysely-codegen": "^0.15.0",
     "nuxt-cron": "^1.6.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.1"
