--- a/packages/sc-coiffure/package.json
+++ b/packages/sc-coiffure/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "kyselgy:codegen": "npx kysely-codegen",
-    "kysely:migrate": "pnpx tsx db/run.ts"
+    "kysely:migrate": "pnpx tsx db/run.ts",
+    "ig:url": "pnpx tsx scripts/get_auth_url.ts"
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/better-sqlite3": "^7.6.11",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
     "kysely-codegen": "^0.15.0",
