--- a/packages/sc-coiffure/package.json
+++ b/packages/sc-coiffure/package.json
@@ -13,6 +13,7 @@
     "ig:url": "pnpx tsx scripts/get_auth_url.ts"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.3.13",
     "@nuxt/image": "^1.7.0",
     "@tailwindcss/typography": "^0.5.13",
     "@vueuse/motion": "^2.2.3",
