--- a/packages/sc-coiffure/package.json
+++ b/packages/sc-coiffure/package.json
@@ -26,10 +26,12 @@
     "lucide-vue-next": "^0.400.0",
     "nuxt": "^3.12.4",
     "radix-vue": "^1.8.5",
+    "resend": "^3.4.0",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-sonner": "^1.1.4"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
