--- a/packages/sc-coiffure/package.json
+++ b/packages/sc-coiffure/package.json
@@ -14,6 +14,7 @@
     "ig:url": "pnpx tsx scripts/get_auth_url.ts"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.2",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/image": "^1.7.0",
     "@tailwindcss/typography": "^0.5.13",
