--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sc-coiffure/site-v1",
+  "name": "@sc-coiffure/site",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -26,7 +26,8 @@
     "svgo": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-fluid-type": "^2.0.3",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "embla-carousel-vue": "^8.1.8"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.5",
