--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ on:
     
 env: 
   IMAGE_NAME: "sc-coiffure"
-  SHORT_SHA: $(echo $GITHUB_SHA | cut -c1-7)
+  SHORT_SHA: $(echo $GITHUB_SHA | head -c7)
+
 
 jobs:
   build:
