--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,14 @@
 name: Build
 
-
 on:
   push:
     branches:
       - feat/version-2
-    
-env: 
-  IMAGE_NAME: "sc-coiffure"
-  SHORT_SHA: $(echo $GITHUB_SHA | head -c7)
 
+env:
+  REGISTRY: 'ghcr.io'
+  IMAGE_NAME: ${{ github.repository }}
+  SHORT_SHA: $(echo $GITHUB_SHA | head -c7)
 
 jobs:
   build:
@@ -21,8 +20,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Build docker image
-        run: |
-        
-          docker build -t ${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }} .
+
+      - name: Login to registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Metadata
+        id: metadata
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=push
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: ${{github.event_name != 'pull_request'}}
+          tags: ${{steps.metadata.outputs.tags}}
+          labels: ${{steps.metadata.outputs.labels}}
