--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=ref,event=push
+            type=ref,event=tag
 
       - name: Build and push
         uses: docker/build-push-action@v2
