--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 env:
   REGISTRY: 'ghcr.io'
   IMAGE_NAME: ${{ github.repository }}
-  SHORT_SHA: $(echo $GITHUB_SHA | head -c7)
 
 jobs:
   build:
@@ -32,7 +31,7 @@ jobs:
         id: metadata
         uses: docker/metadata-action@v3
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
