--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to registry
         uses: docker/login-action@v2
         with:
@@ -43,3 +49,13 @@ jobs:
           push: ${{github.event_name != 'pull_request'}}
           tags: ${{steps.metadata.outputs.tags}}
           labels: ${{steps.metadata.outputs.labels}}
+
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          script: |
+            cd /app/sc-coiffure
+            docker stack deploy -c docker-compose.yml sc-coiffure --with-registry-auth
