--- a/package.json
+++ b/package.json
@@ -17,32 +17,33 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/image": "^1.7.0",
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/typography": "^0.5.14",
     "@vueuse/motion": "^2.2.3",
-    "better-sqlite3": "^11.1.2",
+    "better-sqlite3": "^11.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-autoplay": "^8.1.8",
+    "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-vue": "8.1.8",
+    "handlebars": "^4.7.8",
     "kysely": "^0.27.4",
     "lucide-vue-next": "^0.400.0",
-    "nuxt": "^3.12.4",
-    "radix-vue": "^1.9.2",
+    "nuxt": "^3.13.0",
+    "radix-vue": "^1.9.4",
     "resend": "^3.5.0",
     "shadcn-nuxt": "^0.10.4",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vue": "latest",
-    "vue-sonner": "^1.1.4"
+    "vue-sonner": "^1.1.5"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@types/better-sqlite3": "^7.6.11",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "kysely-codegen": "^0.15.0",
     "nuxt-cron": "^1.6.0",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
