--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "kysely:codegen": "npx kysely-codegen --out-file=types/db.ts",
     "kysely:rollback": "pnpx tsx db/rollback.ts",
     "kysely:migrate": "pnpx tsx db/migrate.ts",
-    "ig:url": "pnpx tsx scripts/get_auth_url.ts",
-    "test": "pnpx tsx scripts/test.ts"
+    "ig:url": "pnpx tsx scripts/get_auth_url.ts"
   },
   "dependencies": {
     "@nuxt/content": "^2.13.2",
