--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,13 +8,13 @@
   "license": "ISC",
   "devDependencies": {
     "@sc-coiffure/core": "workspace:*",
-    "@types/node": "^20.8.4",
-    "@types/yargs": "^17.0.29",
-    "dotenv": "^16.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
+    "@types/node": "^20.19.17",
+    "@types/yargs": "^17.0.33",
+    "axios": "1.6.1",
+    "dotenv": "^16.6.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
     "yargs": "^17.7.2",
-    "zod": "^3.22.4",
-    "axios": "1.6.1"
+    "zod": "^3.25.76"
   }
 }
